<resources>
    <string name="app_name">Pidyon</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_to_pidyon">Welcome to Pidyon!</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="add_contact">Add Contact</string>
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_a_message">Type a message</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="recover_password">Recover Password</string>
    <string name="enter_email_of_account_to_recover">Enter email of account to recover</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="profile_information">Profile Information</string>
    <string name="about_me">About Me</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="username">Username</string>
    <string name="unblock">Unblock</string>
</resources>