<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24ssp"
    android:scrollbars="none"
    tools:context=".controller.AboutMeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20ssp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_80ssp"
                android:layout_height="@dimen/_80ssp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                android:src="@drawable/default_avatar"
                app:riv_oval="true" />
        </FrameLayout>

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45ssp"
            android:layout_marginTop="@dimen/_20ssp"
            android:background="@drawable/background_input"
            android:text="@string/email"
            android:paddingStart="@dimen/_16ssp"
            android:paddingLeft="@dimen/_16ssp"
            android:paddingTop="@dimen/_13ssp"
            android:paddingEnd="@dimen/_16ssp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>

        <TextView
            android:id="@+id/textUsername"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45ssp"
            android:layout_marginTop="@dimen/_20ssp"
            android:background="@drawable/background_input"
            android:text="@string/username"
            android:paddingStart="@dimen/_16ssp"
            android:paddingLeft="@dimen/_16ssp"
            android:paddingTop="@dimen/_13ssp"
            android:paddingEnd="@dimen/_16ssp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>

        <TextView
            android:id="@+id/textEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24ssp"
            android:text="@string/edit_profile"
            android:textColor="@color/primary"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"/>

    </LinearLayout>



</ScrollView>